--- a/MiljoBrott/Views/Shared/_BaseLayout.cshtml
+++ b/MiljoBrott/Views/Shared/_BaseLayout.cshtml
@@ -1,13 +1,28 @@
 ﻿<!DOCTYPE html>
 
-<html>
+@*<html>
+	<head>
+		<meta name="viewport" content="width=device-width" />
+		<title>@ViewBag.Title</title>
+	</head>
+*@
+<html xml:lang="sv" lang="sv">
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
+	<meta charset="UTF-8" />
+	<title>Småstads kommun</title>
+	<link rel="stylesheet" href="~/css/style.css" />
 </head>
 <body>
-    <div>
-        @RenderBody()
-    </div>
+	<div id="wrapper">
+		<header id="logo">
+			<h1>Småstad</h1>
+			<p>Kommunen där vi bryr oss om varandra</p>
+		</header><!-- End header -->
+		@RenderBody()
+		<footer>
+			&copy; Småstads Kommun All rights reserved.
+		</footer>
+	</div><!-- End Content -->
+	</div><!-- End Wrapper -->
 </body>
 </html>
