--- a/MiljoBrott/Views/Citizen/Thanks.cshtml
+++ b/MiljoBrott/Views/Citizen/Thanks.cshtml
@@ -1,5 +1,18 @@
 ﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+	For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+	Layout = "_CitizenLayout";
 }
+<div id="content">
+	<section id="mainColumn">
+		<h2>Tack för din Anmälan</h2>
+		<p class="info">I Småstad är inga brott för små för att anmälas</p>
+
+		<p>
+			Anmälan har nu skickats in till kommunen och kommer att utredas. <br />
+			Vill du komplettera din anmälan kontakta oss via mail eller telefon. <br />
+			Ange då nummer: 2020-45-0201
+		</p>
+		<p><a class="button" href="../index.html">Avsluta</a></p>
+	</section><!-- End Left -->
