--- a/MiljoBrott/Views/Coordinator/ReportCrime.cshtml
+++ b/MiljoBrott/Views/Coordinator/ReportCrime.cshtml
@@ -1,5 +1,10 @@
 ﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+	For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+	ViewBag.Worker = "Coordinator";
+	Layout = "_ReportCrimeLayout";
 }
+<div id="content">
+	<h2>Rapportera brott</h2>
+	<p class="info">Du är inloggad som samordnare</p>
