--- a/MiljoBrott/Views/Coordinator/Thanks.cshtml
+++ b/MiljoBrott/Views/Coordinator/Thanks.cshtml
@@ -1,5 +1,17 @@
 ﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+	For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+	Layout = "_WorkerNavigationLayout";
 }
+<div id="content">
+	<h2>Tack för din anmälan</h2>
+	<p class="info">Du är inloggad som samordnare</p>
+
+	<p>
+		Anmälan har nu skickats in till kommunen och kommer att utredas. <br />
+		Vill du komplettera din anmälan kontakta oss via mail eller telefon. <br />
+		Ange då nummer: 2020-45-0201
+	</p>
+
+	<p><a class="button" href="startCoordinator.html">Avsluta rapporteringen</a></p>
