--- a/MiljoBrott/Views/Citizen/Thanks.cshtml
+++ b/MiljoBrott/Views/Citizen/Thanks.cshtml
@@ -14,5 +14,5 @@
 			Vill du komplettera din anmälan kontakta oss via mail eller telefon. <br />
 			Ange då nummer: 2020-45-0201
 		</p>
-		<p><a class="button" href="../index.html">Avsluta</a></p>
-	</section><!-- End Left -->
+		<p><a class="button" asp-controller="Home" asp-action="Index">Avsluta</a></p>
+</section><!-- End Left -->
