--- a/MiljoBrott/Views/Coordinator/Thanks.cshtml
+++ b/MiljoBrott/Views/Coordinator/Thanks.cshtml
@@ -13,5 +13,5 @@
 		Vill du komplettera din anmälan kontakta oss via mail eller telefon. <br />
 		Ange då nummer: 2020-45-0201
 	</p>
-
-	<p><a class="button" href="startCoordinator.html">Avsluta rapporteringen</a></p>
+	
+	<p><a class="button" asp-controller="Coordinator" asp-action="StartCoordinator">Avsluta rapporteringen</a></p>
