--- a/MiljoBrott/Views/Citizen/Validate.cshtml
+++ b/MiljoBrott/Views/Citizen/Validate.cshtml
@@ -1,6 +1,15 @@
 ﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+	For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 	Layout = "_ValidateLayout";
+}
+
+
+
+<section id="mainColumn">
+
+@section cleanup {
+	@*close opening of section id="mainColumn"*@
+</section><!-- End Left -->
 }
