--- a/MiljoBrott/Views/Home/Login.cshtml
+++ b/MiljoBrott/Views/Home/Login.cshtml
@@ -3,13 +3,15 @@
 *@
 @{
 	Layout = "_CitizenLayout";
+	string action = "Start" + ViewBag.Worker;
 }
 <div id="content">
 	<section id="mainColumn">
 		<h2>Inloggning för Småstads personal</h2>
 		<p class="info">En säker tjänst från Småstads IT-avdelning</p>
 
-		<form method="post" action="coordinator/startCoordinator.html">
+		<form method="post" asp-controller="Coordinator" asp-action="StartCoordinator">
+			@*<form method="post" asp-controller="@ViewBag.Worker" asp-action="@action"> </form> action="coordinator/startCoordinator.html">*@
 			<p>
 				<input type="hidden" name="isSubmitted" value="true" />
 			</p>
@@ -25,8 +27,8 @@
 				<input class="button" type="submit" value="Inloggning av samordnare" />
 				<br />
 				<!--Dessa länkar ska sedan tas bort då det är meningen att vid kontrollen av inloggningsuppgifter så hämtas rätt sida-->
-				<a class="button" href="manager/startManager.html">Inloggning av chefer</a><br />
-				<a class="button" href="investigator/startInvestigator.html">Inloggning av handläggare</a>
+				<a class="button"  asp-controller="Manager" asp-action="StartManager">Inloggning av chefer</a><br />
+				<a class="button"  asp-controller="Investigator" asp-action="StartInvestigator">Inloggning av handläggare</a>
 			</p>
 		</form>
 	</section><!-- End Left -->
