--- a/MiljoBrott/Views/Shared/_CrimeContentLayout.cshtml
+++ b/MiljoBrott/Views/Shared/_CrimeContentLayout.cshtml
@@ -61,7 +61,7 @@
 	</p>
 	<p>
 		<span class="label">Bilder: </span><br />
-		<img src="../images/imagetest.jpg" alt="klicka på bilden" />
+		<img src="~/images/imagetest.jpg" alt="klicka på bilden" />
 	</p>
 </section>
 @RenderSection("workerOptions")
