--- a/MiljoBrott/Views/Shared/_ReportCrimeLayout.cshtml
+++ b/MiljoBrott/Views/Shared/_ReportCrimeLayout.cshtml
@@ -15,7 +15,7 @@
 @*
 	<form asp-controller="@ViewBag.Worker" asp-action="Validate" method="post">
 *@
-<form method="post" action="validate.html">
+<form asp-controller="@ViewBag.Worker" asp-action="Validate" method="post">
 	<p>
 		<input type="hidden" name="isSubmitted" value="true" />
 	</p>
