--- a/MiljoBrott/Views/Shared/_WorkerNavigationLayout.cshtml
+++ b/MiljoBrott/Views/Shared/_WorkerNavigationLayout.cshtml
@@ -1,16 +1,18 @@
 ﻿@{
 	Layout = "_BaseLayout";
+	string actionName = "Start" + ViewBag.Worker;
 }
 <nav>
 	<ul>
-		<li><a class="reports" href="startManager.html">Start(Ärenden)</a></li>
+		<li><a class="reports" asp-controller="@ViewBag.Worker" asp-action="@actionName">Start(Ärenden)</a></li>
+
 		@{
 			if (String.Equals(ViewBag.Worker, "Coordinator"))
 			{
-				<li><a class="reportAdd" href="reportCrime.html">Rapportera brott</a></li>
+				<li><a class="reportAdd" asp-controller="Coordinator" asp-action="ReportCrime">Rapportera brott</a></li>
 			}
 		}
-		<li class="right"><a class="logout" href="../index.html">Logga ut</a></li>
+		<li class="right"><a class="logout" asp-controller="Home" asp-action="Index">Logga ut</a></li>
 	</ul>
 </nav><!-- End Nav -->
 @RenderBody()
