--- a/MiljoBrott/Views/Shared/_WorkerStartLayout.cshtml
+++ b/MiljoBrott/Views/Shared/_WorkerStartLayout.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
 	Layout = "_WorkerNavigationLayout";
 	@*ViewBag.Worker should be used to replace href="blablabl" = Which worker is logged in*@
+	string actionName = "Crime" + ViewBag.Worker;
 }
 
 @RenderBody()
@@ -16,7 +17,7 @@
 	</tr>
 	<tr>
 		<td>2020-05-01</td>
-		<td><a href="crimeInvestigator.html">2020-45-0201</a></td>
+		<td><a asp-controller="@ViewBag.Worker" asp-action="@actionName">2020-45-0201</a></td>
 		<td>Oljeutsläpp</td>
 		<td>Ej startad</td>
 		<td>Tekniska avloppshanteringen</td>
@@ -24,7 +25,7 @@
 	</tr>
 	<tr>
 		<td>2020-05-01</td>
-		<td><a href="crimeInvestigator.html">2020-45-0202</a></td>
+		<td><a asp-controller="@ViewBag.Worker" asp-action="@actionName">2020-45-0202</a></td>
 		<td>Oljeutsläpp</td>
 		<td>Pågående</td>
 		<td>Tekniska avloppshanteringen</td>
@@ -32,7 +33,7 @@
 	</tr>
 	<tr>
 		<td>2020-05-01</td>
-		<td><a href="crimeInvestigator.html">2020-45-0203</a></td>
+		<td><a asp-controller="@ViewBag.Worker" asp-action="@actionName">2020-45-0203</a></td>
 		<td>Oljeutsläpp</td>
 		<td>Ej startad</td>
 		<td>Tekniska avloppshanteringen</td>
@@ -40,7 +41,7 @@
 	</tr>
 	<tr>
 		<td>2020-05-01</td>
-		<td><a href="crimeInvestigator.html">2020-45-0204</a></td>
+		<td><a asp-controller="@ViewBag.Worker" asp-action="@actionName">2020-45-0204</a></td>
 		<td>Oljeutsläpp</td>
 		<td>Ej startad</td>
 		<td>Tekniska avloppshanteringen</td>
@@ -48,7 +49,7 @@
 	</tr>
 	<tr>
 		<td>2020-05-01</td>
-		<td><a href="crimeInvestigator.html">2020-45-0205</a></td>
+		<td><a asp-controller="@ViewBag.Worker" asp-action="@actionName">2020-45-0205</a></td>
 		<td>Oljeutsläpp</td>
 		<td>Pågående</td>
 		<td>Tekniska avloppshanteringen</td>
@@ -56,7 +57,7 @@
 	</tr>
 	<tr>
 		<td>2020-05-01</td>
-		<td><a href="crimeInvestigator.html">2020-45-0206</a></td>
+		<td><a asp-controller="@ViewBag.Worker" asp-action="@actionName">2020-45-0206</a></td>
 		<td>Oljeutsläpp</td>
 		<td>Ej startad</td>
 		<td>Tekniska avloppshanteringen</td>
@@ -64,7 +65,7 @@
 	</tr>
 	<tr>
 		<td>2020-05-01</td>
-		<td><a href="crimeInvestigator.html">2020-45-0206</a></td>
+		<td><a asp-controller="@ViewBag.Worker" asp-action="@actionName">2020-45-0206</a></td>
 		<td>Oljeutsläpp</td>
 		<td>Ej startad</td>
 		<td>Tekniska avloppshanteringen</td>
