Start Seemingly done except for linking to correct errand

--- a/MiljoBrott/Views/Shared/_WorkerStartLayout.cshtml
+++ b/MiljoBrott/Views/Shared/_WorkerStartLayout.cshtml
@@ -2,9 +2,12 @@
 	Layout = "_WorkerNavigationLayout";
 	string actionName = "Crime" + ViewBag.Worker;
 }
+@*@model IEnumerable<Errand>*@
+@model IEnvironmentalRepository
 
 @RenderBody()
 <!--Nedan ser man en lista på ärenden-->
+
 <table>
 	<tr>
 		<th>Ärende anmält</th>
@@ -14,6 +17,19 @@
 		<th>Avdelning</th>
 		<th>Handläggare</th>
 	</tr>
+	@foreach (Errand errand in Model.Errands)@*<!----> Todo FIX asp-route-id for this action so it links to correct page </!---->*@
+	{
+		<tr>
+			<td>@errand.DateOfObservation.ToShortDateString()</td>
+			<td><a asp-controller="@ViewBag.Worker" asp-action="@actionName">@errand.ErrandID</a></td>
+			<td>@errand.TypeOfCrime</td>
+			<td>@errand.StatusId</td>
+			<td>@errand.DepartmentId</td>
+			<td>@errand.EmployeeId</td>
+		</tr>
+	}
+
+	<!----
 	<tr>
 		<td>2020-05-01</td>
 		<td><a asp-controller="@ViewBag.Worker" asp-action="@actionName">2020-45-0201</a></td>
@@ -70,4 +86,5 @@
 		<td>Tekniska avloppshanteringen</td>
 		<td>Ingen utredare satt</td>
 	</tr>
+	</!---->
 </table>
