--- a/MiljoBrott/Views/Coordinator/StartCoordinator.cshtml
+++ b/MiljoBrott/Views/Coordinator/StartCoordinator.cshtml
@@ -1,9 +1,10 @@
 ﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+	For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 	Layout = "_WorkerStartLayout";
 }
+@model IEnvironmentalRepository
 
 <div id="content">
 	<h2>Ärenden</h2>
@@ -20,21 +21,30 @@
 		<tr>
 			<td>
 				<select name="status">
-					<option selected="selected">Välj alla</option>
+					@*<option selected="selected">Välj alla</option>
 					<option value="stat0">Inrapporterad</option>
 					<option value="stat1">Ingen åtgärd</option>
 					<option value="stat2">Påbörjad</option>
-					<option value="stat3">Klar</option>
+					<option value="stat3">Klar</option>*@
+					@foreach (ErrandStatus es in Model.ErrandStatuses)
+					{
+						<option value="@es.StatusId">@es.StatusName</option>
+
+					}
 				</select>
 			</td>
 			<td>
 				<select name="department">
-					<option selected="selected">Välj alla</option>
+					@*<option selected="selected">Välj alla</option>
 					<option value="teknik">Tekniska avloppshanteringen</option>
 					<option value="klimat">Klimat och energi</option>
 					<option value="miljo">Miljö och Hälsoskydd</option>
 					<option value="natur">Natur och Skogsvård</option>
-					<option value="avfall">Renhållning och Avfall</option>
+					<option value="avfall">Renhållning och Avfall</option>*@
+					@foreach (Department dep in Model.Departments)
+					{
+						<option value="@dep.DepartmentId">@dep.DepartmentName</option>
+					}
 				</select>
 			</td>
 			<td><input class="button" type="submit" value="Hämta lista" /></td>
