--- a/MiljoBrott/Views/Investigator/StartInvestigator.cshtml
+++ b/MiljoBrott/Views/Investigator/StartInvestigator.cshtml
@@ -1,9 +1,11 @@
 ﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+	For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 	Layout = "_WorkerStartLayout";
 }
+@model IEnvironmentalRepository
+
 <div id="content">
 	<h2>Ärenden</h2>
 	<p class="info">Du är inloggad som handläggare</p>
@@ -18,11 +20,16 @@
 		<tr>
 			<td>
 				<select name="status">
-					<option selected="selected">Välj alla</option>
+					@*<option selected="selected">Välj alla</option>
 					<option value="stat0">Inrapporterad</option>
 					<option value="stat1">Ingen åtgärd</option>
 					<option value="stat2">Påbörjad</option>
-					<option value="stat3">Klar</option>
+					<option value="stat3">Klar</option>*@
+					@foreach (ErrandStatus es in Model.ErrandStatuses)
+					{
+						<option value="@es.StatusId">@es.StatusName</option>
+
+					}
 				</select>
 			</td>
 			<td><input class="button" type="submit" value="Hämta lista" /></td>
