--- a/MiljoBrott/Views/Manager/StartManager.cshtml
+++ b/MiljoBrott/Views/Manager/StartManager.cshtml
@@ -1,9 +1,10 @@
 ﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+	For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{ 
+@{
 	Layout = "_WorkerStartLayout";
 }
+@model IEnvironmentalRepository
 
 <div id="content">
 	<h2>Ärenden</h2>
@@ -20,24 +21,33 @@
 		<tr>
 			<td>
 				<select name="status">
-					<option selected="selected">Välj alla</option>
+					@*<option selected="selected">Välj alla</option>
 					<option value="stat0">Inrapporterad</option>
 					<option value="stat1">Ingen åtgärd</option>
 					<option value="stat2">Påbörjad</option>
-					<option value="stat3">Klar</option>
+					<option value="stat3">Klar</option>*@
+					@foreach (ErrandStatus es in Model.ErrandStatuses)
+					{
+						<option value="@es.StatusId">@es.StatusName</option>
+
+					}
 				</select>
-			</td>
-			<td>
-				<select name="investigator">
-					<option selected="selected">Välj alla</option>
-					<option value="inv0">Martin Kvist</option>
-					<option value="inv1">Lena Larsson</option>
-					<option value="inv2">Oskar Ivarsson</option>
-					<option value="inv3">Susanne Fred</option>
-				</select>
-			</td>
-			<td><input class="button" type="submit" value="Hämta lista" /></td>
-			<td><input name="casenumber" /></td>
-			<td><input class="button" type="submit" value="Sök" /></td>
-		</tr>
-	</table>
+					</td>
+					<td>
+						<select name="investigator">
+							@*<option selected="selected">Välj alla</option>
+							<option value="inv0">Martin Kvist</option>
+							<option value="inv1">Lena Larsson</option>
+							<option value="inv2">Oskar Ivarsson</option>
+							<option value="inv3">Susanne Fred</option>*@
+							@foreach (Employee ee in Model.GetEmployeesOfRole("investigator"))
+							{
+								<option value="@ee.EmployeeId">@ee.EmployeeName</option>
+							}
+						</select>
+					</td>
+					<td><input class="button" type="submit" value="Hämta lista" /></td>
+					<td><input name="casenumber" /></td>
+					<td><input class="button" type="submit" value="Sök" /></td>
+					</tr>
+				</table>
