crimeX has been made now time for report and validate

--- a/MiljoBrott/Views/Investigator/StartInvestigator.cshtml
+++ b/MiljoBrott/Views/Investigator/StartInvestigator.cshtml
@@ -22,7 +22,7 @@
 				<select name="status">
 					@*<option selected="selected">Välj alla</option>
 					<option value="stat0">Inrapporterad</option>
-					<option value="stat1">Ingen åtgärd</option>
+					<option value="stat1l">Ingen åtgärd</option>
 					<option value="stat2">Påbörjad</option>
 					<option value="stat3">Klar</option>*@
 					@foreach (ErrandStatus es in Model.ErrandStatuses)
