--- a/MiljoBrott/Views/Coordinator/CrimeCoordinator.cshtml
+++ b/MiljoBrott/Views/Coordinator/CrimeCoordinator.cshtml
@@ -1,16 +1,17 @@
 ﻿@{
-	Layout = "_CrimeContentLayout";
+	//Layout = "_CrimeContentLayout";
+	Layout = "_WorkerNavigationLayout";
+
 }
+@model IEnumerable<Department>
+@*The Crime content part will be inbetween these 2 sections*@
 
-@section workerNavigation {
-	@*The Crime content part will be inbetween these 2 sections*@
+<div id="content">
+	<h2>Detaljer för ärendet</h2>
+	<p class="info">Du är inloggad som samordnare</p>
 
-	<div id="content">
-		<h2>Detaljer för ärendet</h2>
-		<p class="info">Du är inloggad som samordnare</p>
-}
+	@await Component.InvokeAsync("CrimeContent", ViewBag.ID)
 
-@section workerOptions {
 	@*The Crime content part will be inbetween these 2 sections*@
 	<section id="bottomColumn">
 		<h3>Redigera ärende</h3>
@@ -18,14 +19,17 @@
 			Ange enhet:
 			<select name="department">
 				<option selected="selected">Välj</option>
-				<option value="unit0">Småstads Kommun</option>
+				@*<option value="unit0">Småstads Kommun</option>
 				<option value="unit1">Tekniska Avloppshantering</option>
 				<option value="unit2">Klimat och Energi</option>
 				<option value="unit3">Miljö och Hälsoskydd</option>
 				<option value="unit4">Natur och Skogsvård</option>
-				<option value="unit5">Renhållning och Avfall</option>
+				<option value="unit5">Renhållning och Avfall</option>*@
+				@foreach (Department dep in Model)
+				{
+					<option value="@dep.DepartmentId">@dep.DepartmentName</option>
+				}
 			</select>
 		</p>
 		<p><input class="button" type="submit" value="Spara" /></p>
 	</section>
-}
