--- a/MiljoBrott/Views/Investigator/CrimeInvestigator.cshtml
+++ b/MiljoBrott/Views/Investigator/CrimeInvestigator.cshtml
@@ -2,44 +2,46 @@
 	For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-	Layout = "_CrimeContentLayout";
+	Layout = "_WorkerNavigationLayout";
 }
+@model IEnumerable<ErrandStatus>
 
-@section workerNavigation {
-	@*The Crime content part will be inbetween these 2 sections*@
+<div id="content">
+	<h2>Detaljer för ärendet</h2>
+	<p class="info">Du är inloggad som handläggare</p>
 
-	<div id="content">
-		<h2>Detaljer för ärendet</h2>
-		<p class="info">Du är inloggad som handläggare</p>
-}
+@await Component.InvokeAsync("CrimeContent", ViewBag.ID)
 
-@section workerOptions {
-	@*The Crime content part will be inbetween these 2 sections*@
-	<section id="bottomColumn">
-		<h3>Redigera ärende</h3>
-		<p class="label">Händelser:</p>
-		<textarea name="events" rows="5" cols="60"></textarea>
+@*The Crime content part will be inbetween these 2 sections*@
+<section id="bottomColumn">
+	<h3>Redigera ärende</h3>
+	<p class="label">Händelser:</p>
+	<textarea name="events" rows="5" cols="60"></textarea>
 
-		<p class="label">Mer information:</p>
-		<textarea name="information" rows="5" cols="60"></textarea>
+	<p class="label">Mer information:</p>
+	<textarea name="information" rows="5" cols="60"></textarea>
 
-		<p class="label">Prover:</p>
-		<input type="file" name="loadSample" />
+	<p class="label">Prover:</p>
+	<input type="file" name="loadSample" />
 
-		<p class="label">Ladda upp bilder:</p>
-		<input type="file" name="loadImage" />
+	<p class="label">Ladda upp bilder:</p>
+	<input type="file" name="loadImage" />
 
-		<p class="label">Ändring av status:</p>
-		<select name="status">
-			<option selected="selected">Välj</option>
-			<option value="stat1">Inrapporterad</option>
-			<option value="stat2">Ingen Åtgärd</option>
-			<option value="stat3">Påbörjad</option>
-			<option value="stat4">Klar</option>
-		</select>
+	<p class="label">Ändring av status:</p>
+	<select name="status">
+		@*<option selected="selected">Välj</option>
+		<option value="stat1">Inrapporterad</option>
+		<option value="stat2">Ingen Åtgärd</option>
+		<option value="stat3">Påbörjad</option>
+		<option value="stat4">Klar</option>*@
+		@foreach (ErrandStatus es in Model)
+		{
+			<option value="@es.StatusId">@es.StatusName</option>
+		}
+	</select>
 
-		<p>
-			<input class="button" type="submit" value="Spara ändringarna" />
-		</p>
-	</section>
-}
+	<p>
+		<input class="button" type="submit" value="Spara ändringarna" />
+	</p>
+</section>
+
