--- a/MiljoBrott/Views/Manager/CrimeManager.cshtml
+++ b/MiljoBrott/Views/Manager/CrimeManager.cshtml
@@ -1,31 +1,32 @@
 ﻿@{
-	Layout = "_CrimeContentLayout";
+	Layout = "_WorkerNavigationLayout";
 }
+@model IEnumerable<Employee>
 
-@section workerNavigation {
-	@*The Crime content part will be inbetween these 2 sections*@
+<div id="content">
+	<h2>Detaljer för ärendet</h2>
+	<p class="info">Du är inloggad som avdelningschef</p>
+@await Component.InvokeAsync("CrimeContent", ViewBag.ID)
 
-	<div id="content">
-		<h2>Detaljer för ärendet</h2>
-		<p class="info">Du är inloggad som avdelningschef</p>
-}
 
-@section workerOptions {
-	@*The Crime content part will be inbetween these 2 sections*@
-	<section id="bottomColumn">
-		<h3>Redigera ärende</h3>
-		<p>
-			Ange handläggare:
-			<select name="investigator">
-				<option selected="selected">Välj</option>
-				<option value="inv1">Ada Bengtsson</option>
-				<option value="inv2">Bengt Cederström</option>
-				<option value="inv3">Cecilia Danielsson</option>
-				<option value="inv4">David Ekström</option>
-				<option value="inv5">Erik Falkenberg</option>
-			</select>
-		</p>
-		<p><input type="checkbox" name="noAction" value="true" /> Ingen åtgärd: <input type="text" name="reason" value="Ange motivering" /></p>
-		<p><input class="button" type="submit" value="Spara" /></p>
-	</section>
-}
+@*The Crime content part will be inbetween these 2 sections*@
+<section id="bottomColumn">
+	<h3>Redigera ärende</h3>
+	<p>
+		Ange handläggare:
+		<select name="investigator">
+			<option selected="selected">Välj</option>
+			@foreach (Employee ee in Model)
+			{
+				<option value="@ee.EmployeeId">@ee.EmployeeName</option>
+			}
+			@*<option value="inv1">Ada Bengtsson</option>
+			<option value="inv2">Bengt Cederström</option>
+			<option value="inv3">Cecilia Danielsson</option>
+			<option value="inv4">David Ekström</option>
+			<option value="inv5">Erik Falkenberg</option>*@
+		</select>
+	</p>
+	<p><input type="checkbox" name="noAction" value="true" /> Ingen åtgärd: <input type="text" name="reason" value="Ange motivering" /></p>
+	<p><input class="button" type="submit" value="Spara" /></p>
+</section>
