--- a/MiljoBrott/Views/Shared/Components/CrimeContent/Default.cshtml
+++ b/MiljoBrott/Views/Shared/Components/CrimeContent/Default.cshtml
@@ -1,34 +1,38 @@
-﻿@{
-	Layout = "_WorkerNavigationLayout";
-}
-@*DEPRECATED DEPRECATED DEPRECATED DEPRECATED DEPRECATED*@
-@RenderSection("workerNavigation")
-<h3>Ärende: 2020-45-0201</h3>
+﻿@model Errand 
+
+
+<h3>Ärende: @Model.ErrandID</h3>
 <section id="leftColumn">
 	<h3>Anmälan</h3>
 	<p>
 		<span class="label">Typ av brott: </span><br />
-		Nedskräpning
+		<!-- Nedskräpning -->
+		@Model.TypeOfCrime
 	</p>
 	<p>
 		<span class="label">Brottsplats: </span><br />
-		Skogslunden vid Jensens gård
+		@Model.Place
+		<!--Skogslunden vid Jensens gård -->
 	</p>
 	<p>
 		<span class="label">Brottsdatum: </span><br />
-		2020-04-24
+		@Model.DateOfObservation.ToShortDateString()
+		<!--2020-04-24 -->
 	</p>
 	<p>
 		<span class="label">Anmälare: </span><br />
-		Maja Färjedal
+		@Model.InformerName
+		<!--Maja Färjedal -->
 	</p>
 	<p>
 		<span class="label">Telefon: </span><br />
-		432-554 55 22
+		@Model.InformerPhone
+		<!--432-554 55 22 -->
 	</p>
 	<p>
 		<span class="label">Observationer:</span><br />
-		Jag upptäckte soporna på en promenad den 24 april
+		@Model.Observation
+		<!--Jag upptäckte soporna på en promenad den 24 april -->
 	</p>
 </section>
 
@@ -36,15 +40,15 @@
 	<h3>Utredning</h3>
 	<p>
 		<span class="label">Status:</span><br />
-		Pågående
+		@Model.StatusId
 	</p>
 	<p>
 		<span class="label">Ansvarig avdelning: </span><br />
-		Tekniska avloppshanteringen
+		@Model.DepartmentId
 	</p>
 	<p>
 		<span class="label">Handläggare: </span><br />
-		Ada Bengtsson
+		@Model.EmployeeId
 	</p>
 	<p>
 		<span class="label">Provtagning: </span><br />
@@ -52,15 +56,14 @@
 	</p>
 	<p>
 		<span class="label">Ytterligare information: </span><br />
-		Bland soporna hittades ett brev adresserat till Gösta Olsson
+		@Model.InvestigatorInfo
 	</p>
 	<p>
 		<span class="label">Händelser: </span><br />
-		Brev skickat till Gösta Olsson om soporna och anmälan som är gjord till polisen 2020-05-20
+		@Model.InvestigatorAction
 	</p>
 	<p>
 		<span class="label">Bilder: </span><br />
 		<img src="~/images/imagetest.jpg" alt="klicka på bilden" />
 	</p>
 </section>
-@RenderSection("workerOptions")
