--- a/MiljoBrott/Views/Shared/_ReportCrimeLayout.cshtml
+++ b/MiljoBrott/Views/Shared/_ReportCrimeLayout.cshtml
@@ -7,6 +7,7 @@
 	//ViewBag.Worker = "Citizen";
 	//Layout = "_CitizenLayout";
 }
+@model Errand
 
 @RenderBody()
 
@@ -17,31 +18,69 @@
 	</p>
 	<p>
 		<span class="label">Var har brottet skett någonstans?</span><br />
-		<input type="text" name="place" /> *
+		<input asp-for="Place" /> *
+		<span asp-validation-for="Place"></span>
 	</p>
 	<p>
 		<span class="label">Vilken typ av brott?</span><br />
-		<input type="text" name="crime" /> *
+		<input asp-for="TypeOfCrime" /> *
+		<span asp-validation-for="TypeOfCrime"></span>
 	</p>
 	<p>
 		<span class="label">När skedde brottet?</span><br />
-		<input type="text" name="crimeDate" /> *
+		<input asp-for="DateOfObservation" /> *
+		<span asp-validation-for="DateOfObservation"></span>
 	</p>
 	<p>
 		<span class="label">Ditt namn (för- och efternamn):</span><br />
-		<input type="text" name="informersName" /> *
+		<input asp-for="InformerName" /> *
+		<span asp-validation-for="InformerName"></span>
 	</p>
 	<p>
 		<span class="label">Din telefon:</span><br />
-		<input type="text" name="phone" /> *
+		<input asp-for="InformerPhone" /> *
+		<span asp-validation-for="InformerPhone"></span>
 	</p>
 	<p>
 		<span class="label">Beskriv din observation<br /> (ex. namn på misstänkt person):</span><br />
-		<textarea name="observation" rows="5" cols="16"></textarea>
+		<textarea asp-for="Observation" rows="5" cols="16"></textarea>
 	</p>
 	<p>
 		<input class="button" type="submit" value="Skicka in" />
 	</p>
 </form>
+@*<p>Fyll i formuläret nedan, alla rutor markerade med stjärna (*) måste fyllas i</p>
+	<form asp-controller="@ViewBag.Worker" asp-action="Validate" method="post">
+		<p>
+			<input type="hidden" name="isSubmitted" value="true" />
+		</p>
+		<p>
+			<span class="label">Var har brottet skett någonstans?</span><br />
+			<input type="text" name="place" /> *
+		</p>
+		<p>
+			<span class="label">Vilken typ av brott?</span><br />
+			<input type="text" name="crime" /> *
+		</p>
+		<p>
+			<span class="label">När skedde brottet?</span><br />
+			<input type="text" name="crimeDate" /> *
+		</p>
+		<p>
+			<span class="label">Ditt namn (för- och efternamn):</span><br />
+			<input type="text" name="informersName" /> *
+		</p>
+		<p>
+			<span class="label">Din telefon:</span><br />
+			<input type="text" name="phone" /> *
+		</p>
+		<p>
+			<span class="label">Beskriv din observation<br /> (ex. namn på misstänkt person):</span><br />
+			<textarea name="observation" rows="5" cols="16"></textarea>
+		</p>
+		<p>
+			<input class="button" type="submit" value="Skicka in" />
+		</p>
+	</form>*@
 @RenderSection("cleanup", false)
 
