--- a/MiljoBrott/Views/Coordinator/StartCoordinator.cshtml
+++ b/MiljoBrott/Views/Coordinator/StartCoordinator.cshtml
@@ -21,8 +21,8 @@
 		<tr>
 			<td>
 				<select name="status">
-					@*<option selected="selected">Välj alla</option>
-					<option value="stat0">Inrapporterad</option>
+					<option selected="selected">Välj alla</option>
+					@*<option value="stat0">Inrapporterad</option>
 					<option value="stat1">Ingen åtgärd</option>
 					<option value="stat2">Påbörjad</option>
 					<option value="stat3">Klar</option>*@
@@ -35,8 +35,8 @@
 			</td>
 			<td>
 				<select name="department">
-					@*<option selected="selected">Välj alla</option>
-					<option value="teknik">Tekniska avloppshanteringen</option>
+					<option selected="selected">Välj alla</option>
+					@*<option value="teknik">Tekniska avloppshanteringen</option>
 					<option value="klimat">Klimat och energi</option>
 					<option value="miljo">Miljö och Hälsoskydd</option>
 					<option value="natur">Natur och Skogsvård</option>
