--- a/MiljoBrott/Views/Investigator/StartInvestigator.cshtml
+++ b/MiljoBrott/Views/Investigator/StartInvestigator.cshtml
@@ -20,8 +20,8 @@
 		<tr>
 			<td>
 				<select name="status">
-					@*<option selected="selected">Välj alla</option>
-					<option value="stat0">Inrapporterad</option>
+					<option selected="selected">Välj alla</option>
+					@*<option value="stat0">Inrapporterad</option>
 					<option value="stat1l">Ingen åtgärd</option>
 					<option value="stat2">Påbörjad</option>
 					<option value="stat3">Klar</option>*@
