--- a/MiljoBrott/Views/Citizen/Validate.cshtml
+++ b/MiljoBrott/Views/Citizen/Validate.cshtml
@@ -9,26 +9,27 @@
 }
 @model Errand
 
-<section id="mainColumn">
-	<h2>Din anmälan av miljöbrott</h2>
-	@{
-		if (String.Equals(ViewBag.Worker, "Coordinator"))
-		{
-			<p class="info">Du är inloggad som samordnare</p>
-		}
-	}
-	<p class="label">
-		Vänligen läs igenom din anmälan och se att allt är okej.<br />
-		Om något är fel, gå tillbaka och ändra. Annars välj Bekräfta.
-	</p>
-	<p><span class="label">Var har brottet skett någonstans?</span><br />@Model.Place</p>
-	<p><span class="label">Vilken typ av brott?</span><br />@Model.TypeOfCrime</p>
-	<p><span class="label">När skedde brottet?</span><br /> @Model.DateOfObservation.ToShortDateString() @*Vet inte*@</p>
-	<p><span class="label">Ditt namn (för- och efternamn):</span><br />@Model.InformerName</p>
-	<p><span class="label">Din telefon:</span><br />@Model.InformerPhone</p>
-	<p><span class="label">Mer information:</span><br />@Model.Observation</p>
-	<p>
-		<a class="button" asp-controller="@controller" asp-action="@action" id="link">Tillbaka</a>
-		<a class="button" asp-controller="@ViewBag.Worker" asp-action="Thanks">Bekräfta</a>
-	</p>
-</section><!-- End Left -->
+	<div id="content">
+		<section id="mainColumn">
+			<h2>Din anmälan av miljöbrott</h2>
+			@{
+				if (String.Equals(ViewBag.Worker, "Coordinator"))
+				{
+					<p class="info">Du är inloggad som samordnare</p>
+				}
+			}
+			<p class="label">
+				Vänligen läs igenom din anmälan och se att allt är okej.<br />
+				Om något är fel, gå tillbaka och ändra. Annars välj Bekräfta.
+			</p>
+			<p><span class="label">Var har brottet skett någonstans?</span><br />@Model.Place</p>
+			<p><span class="label">Vilken typ av brott?</span><br />@Model.TypeOfCrime</p>
+			<p><span class="label">När skedde brottet?</span><br /> @Model.DateOfObservation.ToShortDateString() @*Vet inte*@</p>
+			<p><span class="label">Ditt namn (för- och efternamn):</span><br />@Model.InformerName</p>
+			<p><span class="label">Din telefon:</span><br />@Model.InformerPhone</p>
+			<p><span class="label">Mer information:</span><br />@Model.Observation</p>
+			<p>
+				<a class="button" asp-controller="@controller" asp-action="@action" id="link">Tillbaka</a>
+				<a class="button" asp-controller="@ViewBag.Worker" asp-action="Thanks">Bekräfta</a>
+			</p>
+		</section><!-- End Left -->
