--- a/MiljoBrott/Views/Manager/StartManager.cshtml
+++ b/MiljoBrott/Views/Manager/StartManager.cshtml
@@ -21,8 +21,8 @@
 		<tr>
 			<td>
 				<select name="status">
-					@*<option selected="selected">Välj alla</option>
-					<option value="stat0">Inrapporterad</option>
+					<option selected="selected">Välj alla</option>
+					@*<option value="stat0">Inrapporterad</option>
 					<option value="stat1">Ingen åtgärd</option>
 					<option value="stat2">Påbörjad</option>
 					<option value="stat3">Klar</option>*@
@@ -35,8 +35,8 @@
 					</td>
 					<td>
 						<select name="investigator">
-							@*<option selected="selected">Välj alla</option>
-							<option value="inv0">Martin Kvist</option>
+							<option selected="selected">Välj alla</option>
+							@*<option value="inv0">Martin Kvist</option>
 							<option value="inv1">Lena Larsson</option>
 							<option value="inv2">Oskar Ivarsson</option>
 							<option value="inv3">Susanne Fred</option>*@
