--- a/MiljoBrott/Views/Shared/_WorkerStartLayout.cshtml
+++ b/MiljoBrott/Views/Shared/_WorkerStartLayout.cshtml
@@ -17,7 +17,7 @@
 		<th>Avdelning</th>
 		<th>Handläggare</th>
 	</tr>
-	@foreach (Errand errand in Model.Errands)@*<!----> Todo FIX asp-route-id for this action so it links to correct page </!---->*@
+	@foreach (Errand errand in Model.Errands)
 	{
 		<tr>
 			<td>@errand.DateOfObservation.ToShortDateString()</td>
@@ -28,7 +28,7 @@
 			<td>@errand.EmployeeId</td>
 		</tr>
 	}
-
+</table>
 	<!----
 	<tr>
 		<td>2020-05-01</td>
@@ -86,5 +86,6 @@
 		<td>Tekniska avloppshanteringen</td>
 		<td>Ingen utredare satt</td>
 	</tr>
-	</!---->
-</table>
+	
+
+</!---->
