--- a/MiljoBrott/Views/Citizen/Thanks.cshtml
+++ b/MiljoBrott/Views/Citizen/Thanks.cshtml
@@ -4,6 +4,8 @@
 @{
 	Layout = "_CitizenLayout";
 }
+
+
 <div id="content">
 	<section id="mainColumn">
 		<h2>Tack för din Anmälan</h2>
@@ -12,7 +14,7 @@
 		<p>
 			Anmälan har nu skickats in till kommunen och kommer att utredas. <br />
 			Vill du komplettera din anmälan kontakta oss via mail eller telefon. <br />
-			Ange då nummer: 2020-45-0201
+			Ange då nummer: @ViewBag.Ref
 		</p>
 		<p><a class="button" asp-controller="Home" asp-action="Index">Avsluta</a></p>
 	</section><!-- End Left -->
