--- a/MiljoBrott/Views/Investigator/CrimeInvestigator.cshtml
+++ b/MiljoBrott/Views/Investigator/CrimeInvestigator.cshtml
@@ -4,44 +4,70 @@
 @{
 	Layout = "_WorkerNavigationLayout";
 }
-@model IEnumerable<ErrandStatus>
+@*@model IEnumerable<ErrandStatus>*@
+@model Errand
 
 <div id="content">
 	<h2>Detaljer för ärendet</h2>
 	<p class="info">Du är inloggad som handläggare</p>
 
-@await Component.InvokeAsync("CrimeContent", ViewBag.ID)
+	@await Component.InvokeAsync("CrimeContent", ViewBag.ID)
 
-@*The Crime content part will be inbetween these 2 sections*@
+	@*The Crime content part will be inbetween these 2 sections*@
 <section id="bottomColumn">
-	<h3>Redigera ärende</h3>
-	<p class="label">Händelser:</p>
-	<textarea name="events" rows="5" cols="60"></textarea>
+	<form asp-controller="Investigator" asp-action="InvestigatorDataUpload" asp-route-id="@ViewBag.ID" method="post" enctype="multipart/form-data" multiple>
+		<p class="label">Händelser:</p>
+		<textarea asp-for="InvestigatorAction" rows="5" cols="60"></textarea>
 
-	<p class="label">Mer information:</p>
-	<textarea name="information" rows="5" cols="60"></textarea>
+		<p class="label">Mer information:</p>
+		<textarea asp-for="InvestigatorInfo" rows="5" cols="60"></textarea>
 
-	<p class="label">Prover:</p>
-	<input type="file" name="loadSample" />
+		<p class="label">Prover:</p>
+		<input type="file" name="loadSample" />
 
-	<p class="label">Ladda upp bilder:</p>
-	<input type="file" name="loadImage" />
+		<p class="label">Ladda upp bilder:</p>
+		<input type="file" name="loadImage" />
 
-	<p class="label">Ändring av status:</p>
-	<select name="status">
-		@*<option selected="selected">Välj</option>
-		<option value="stat1">Inrapporterad</option>
-		<option value="stat2">Ingen Åtgärd</option>
-		<option value="stat3">Påbörjad</option>
-		<option value="stat4">Klar</option>*@
-		@foreach (ErrandStatus es in Model)
-		{
-			<option value="@es.StatusId">@es.StatusName</option>
-		}
-	</select>
+		<p class="label">Ändring av status:</p>
+		<select asp-for="StatusId" asp-items="@(new SelectList(ViewBag.Statuses, "StatusId", "StatusName"))">
+			<option selected="selected">Välj</option>
+		</select>
 
-	<p>
-		<input class="button" type="submit" value="Spara ändringarna" />
-	</p>
+		<p>
+			<input class="button" type="submit" value="Spara ändringarna" />
+		</p>
+	</form>
+
+	@*<form asp-controller="Investigator" asp-action="AssignInvestigator" method="post" enctype="multipart/form-data" multiple>
+			<h3>Redigera ärende</h3>
+			<p class="label">Händelser:</p>
+			<textarea name="events" rows="5" cols="60"></textarea>
+
+			<p class="label">Mer information:</p>
+			<textarea name="information" rows="5" cols="60"></textarea>
+
+			<p class="label">Prover:</p>
+			<input type="file" name="loadSample" />
+
+			<p class="label">Ladda upp bilder:</p>
+			<input type="file" name="loadImage" />
+
+			<p class="label">Ändring av status:</p>
+			@*<select name="status">
+					<option selected="selected">Välj</option>
+						<option value="stat1">Inrapporterad</option>
+						<option value="stat2">Ingen Åtgärd</option>
+						<option value="stat3">Påbörjad</option>
+						<option value="stat4">Klar</option>
+					@foreach (ErrandStatus es in Model)
+					{
+						<option value="@es.StatusId">@es.StatusName</option>
+					}
+				</select>
+
+			<p>
+				<input class="button" type="submit" value="Spara ändringarna" />
+			</p>
+		</form>*@
 </section>
 
