--- a/MiljoBrott/Views/Shared/_WorkerNavigationLayout.cshtml
+++ b/MiljoBrott/Views/Shared/_WorkerNavigationLayout.cshtml
@@ -12,7 +12,8 @@
 				<li><a class="reportAdd" asp-controller="Coordinator" asp-action="ReportCrime">Rapportera brott</a></li>
 			}
 		}
-		<li class="right"><a class="logout" asp-controller="Home" asp-action="Index">Logga ut</a></li>
+		@*Make below link to Account controller instead and action*@
+		<li class="right"><a class="logout" asp-controller="Home" asp-action="Logout">Logga ut</a></li>
 	</ul>
 </nav><!-- End Nav -->
 @RenderBody()
