--- a/MiljoBrott/Views/Manager/StartManager.cshtml
+++ b/MiljoBrott/Views/Manager/StartManager.cshtml
@@ -23,10 +23,6 @@
 			<td>
 				<select name="status">
 					<option selected="selected">Välj alla</option>
-					@*<option value="stat0">Inrapporterad</option>
-						<option value="stat1">Ingen åtgärd</option>
-						<option value="stat2">Påbörjad</option>
-						<option value="stat3">Klar</option>*@
 					@foreach (ErrandStatus es in Model.ErrandStatuses)
 					{
 						<option value="@es.StatusId">@es.StatusName</option>
@@ -41,7 +37,7 @@
 						<option value="inv1">Lena Larsson</option>
 						<option value="inv2">Oskar Ivarsson</option>
 						<option value="inv3">Susanne Fred</option>*@
-					@foreach (Employee ee in Model.GetEmployeesOfRole("Investigator"))
+					@foreach (Employee ee in await Model.GetEmployeesOfDepartmentAndRole(ViewBag.departmentId, "Investigator"))
 					{
 						<option value="@ee.EmployeeId">@ee.EmployeeName</option>
 					}
