--- a/MiljoBrott/Views/Shared/Components/ReportCrime/Default.cshtml
+++ b/MiljoBrott/Views/Shared/Components/ReportCrime/Default.cshtml
@@ -1,11 +1,4 @@
-﻿@{
-	Layout = "_WorkerNavigationLayout";
-	if (String.Equals(ViewBag.Worker, "Citizen"))
-	{
-		Layout = "_CitizenLayout";
-	}
-}
-@model Errand
+﻿@model Errand
 
 
 <p>Fyll i formuläret nedan, alla rutor markerade med stjärna (*) måste fyllas i</p>
