--- a/MiljoBrott/Views/Home/AccessDenied.cshtml
+++ b/MiljoBrott/Views/Home/AccessDenied.cshtml
@@ -7,7 +7,7 @@
 		<h1>Access Denied</h1>
 
 		<p>
-			<a asp-controller="Home" asp-action="Login">Logga in</a>
+			<a asp-controller="Home" asp-action="Login">Gå till inloggnings-sidan.</a>
 		</p>
 
 	</section><!-- End Left -->
