--- a/MiljoBrott/Views/Shared/Components/StartViewErrandContent/Default.cshtml
+++ b/MiljoBrott/Views/Shared/Components/StartViewErrandContent/Default.cshtml
@@ -6,23 +6,35 @@
 
 
 <table>
-	<tr>
-		<th>Ärende anmält</th>
-		<th>Ärendenummer</th>
-		<th>Miljöbrott</th>
-		<th>Status</th>
-		<th>Avdelning</th>
-		<th>Handläggare</th>
-	</tr>
-	@foreach (StartViewErrand sve in @Model)
-	{
-		<tr>
-			<td>@sve.DateOfObservation.ToShortDateString()</td>
-			<td><a asp-controller="@ViewBag.Worker" asp-action="@actionName" asp-route-id="@sve.ErrandId">@sve.RefNumber</a></td>
-			<td>@sve.TypeOfCrime</td>
-			<td>@sve.StatusName</td>
-			<td>@sve.DepartmentName</td>
-			<td>@sve.EmployeeName</td>
-		</tr>
+
+	@{
+		if (Model.Count() == 0 && ViewBag.FilteredOrSearched)
+		{
+			<tr>
+				<td>Inga ärenden finns enligt filtreringen/sökningen.</td>
+			</tr>
+		}
+		else
+		{
+			<tr>
+				<th>Ärende anmält</th>
+				<th>Ärendenummer</th>
+				<th>Miljöbrott</th>
+				<th>Status</th>
+				<th>Avdelning</th>
+				<th>Handläggare</th>
+			</tr>
+			@foreach (StartViewErrand sve in @Model)
+			{
+				<tr>
+					<td>@sve.DateOfObservation.ToShortDateString()</td>
+					<td><a asp-controller="@ViewBag.Worker" asp-action="@actionName" asp-route-id="@sve.ErrandId">@sve.RefNumber</a></td>
+					<td>@sve.TypeOfCrime</td>
+					<td>@sve.StatusName</td>
+					<td>@sve.DepartmentName</td>
+					<td>@sve.EmployeeName</td>
+				</tr>
+			}
+		}
 	}
 </table>
