--- a/MiljoBrott/Views/Coordinator/StartCoordinator.cshtml
+++ b/MiljoBrott/Views/Coordinator/StartCoordinator.cshtml
@@ -20,29 +20,40 @@
 			<td>&nbsp;</td>
 		</tr>
 		<tr>
-			<td>
-				<select name="status">
-					<option selected="selected">Välj alla</option>
-					@foreach (ErrandStatus es in Model.ErrandStatuses)
-					{
-						<option value="@es.StatusId">@es.StatusName</option>
+			<form asp-controller="Coordinator" asp-action="StartCoordinator" method="post" enctype="multipart/form-data" multiple>
+				<td>
+					<select name="statusId">
+						<option selected="selected">Välj alla</option>
+						@foreach (ErrandStatus es in Model.ErrandStatuses)
+						{
+							<option value="@es.StatusId">@es.StatusName</option>
 
-					}
-				</select>
-			</td>
-			<td>
-				<select name="department">
-					<option selected="selected">Välj alla</option>
-					@foreach (Department dep in Model.Departments)
-					{
-						<option value="@dep.DepartmentId">@dep.DepartmentName</option>
-					}
-				</select>
-			</td>
+						}
+					</select>
+				</td>
+				<td>
+					<select name="departmentId">
+						<option selected="selected">Välj alla</option>
+						@foreach (Department dep in Model.Departments)
+						{
+							<option value="@dep.DepartmentId">@dep.DepartmentName</option>
+						}
+					</select>
+				</td>
+				<input type="hidden" name="isCasenumber" value="false" />
+				<td><input class="button" type="submit" value="Hämta lista" /></td>
+			</form>
+				@*
 			<td><input class="button" type="submit" value="Hämta lista" /></td>
 			<td><input name="casenumber" /></td>
 			<td><input class="button" type="submit" value="Sök" /></td>
+				*@
+				<form asp-controller="Coordinator" asp-action="StartCoordinator" method="post" enctype="multipart/form-data" multiple>
+					<td><input name="casenumber" /></td>
+					<input type="hidden" name="isCasenumber" value="true" />
+					<td><input class="button" type="submit" value="Sök" /></td>
+				</form>
 		</tr>
 	</table>
 
-	@await Component.InvokeAsync("StartViewErrandContent", ViewBag.employeeID)
+	@await Component.InvokeAsync("StartViewErrandContent", ViewBag.startViewErrandInputData)
