--- a/MiljoBrott/Views/Investigator/StartInvestigator.cshtml
+++ b/MiljoBrott/Views/Investigator/StartInvestigator.cshtml
@@ -6,7 +6,7 @@
 	Layout = "_WorkerNavigationLayout";
 	//@model IEnvironmentalRepository
 }
-@model IEnumerable<ErrandStatus>
+@model ErrandStatus
 
 <div id="content">
 	<h2>Ärenden</h2>
@@ -20,20 +20,22 @@
 			<td>&nbsp;</td>
 		</tr>
 		<tr>
-			<td>
-				<select name="status">
-					<option selected="selected">Välj alla</option>
-					@foreach (ErrandStatus es in Model)
-					{
-						<option value="@es.StatusId">@es.StatusName</option>
+			<form asp-controller="Investigator" asp-action="StartInvestigator" method="post" enctype="multipart/form-data" multiple>
+				<td>
+					<select asp-for="StatusId" asp-items="@(new SelectList(ViewBag.Statuses, "StatusId", "StatusName"))">
+						<option selected="selected">Välj alla</option>
+					</select>
+					<input type="hidden" name="isCasenumber" value="false" />
+				</td>
+				<td><input class="button" type="submit" value="Hämta lista" /></td>
 
-					}
-				</select>
-			</td>
-			<td><input class="button" type="submit" value="Hämta lista" /></td>
-			<td><input name="casenumber" /></td>
-			<td><input class="button" type="submit" value="Sök" /></td>
+			</form>
+			<form asp-controller="Investigator" asp-action="StartInvestigator" method="post" enctype="multipart/form-data" multiple>
+				<td><input name="casenumber" /></td>
+				<input type="hidden" name="isCasenumber" value="true" />
+				<td><input class="button" type="submit" value="Sök" /></td>
+			</form>
 		</tr>
 	</table>
 
-	@await Component.InvokeAsync("StartViewErrandContent", ViewBag.employeeID)
+	@await Component.InvokeAsync("StartViewErrandContent", ViewBag.startViewErrandInputData)
