--- a/MiljoBrott/Views/Manager/StartManager.cshtml
+++ b/MiljoBrott/Views/Manager/StartManager.cshtml
@@ -19,34 +19,37 @@
 			<td class="label">Ärendenummer:</td>
 			<td>&nbsp;</td>
 		</tr>
-		<tr>
-			<td>
-				<select name="status">
-					<option selected="selected">Välj alla</option>
-					@foreach (ErrandStatus es in Model.ErrandStatuses)
-					{
-						<option value="@es.StatusId">@es.StatusName</option>
+		<form asp-controller="Manager" asp-action="StartManager" method="post" enctype="multipart/form-data" multiple>
+			<tr>
+				<td>
+					<select name="statusId">
+						<option selected="selected">Välj alla</option>
+						@foreach (ErrandStatus es in Model.ErrandStatuses)
+						{
+							<option value="@es.StatusId">@es.StatusName</option>
 
-					}
-				</select>
-			</td>
-			<td>
-				<select name="investigator">
-					<option selected="selected">Välj alla</option>
-					@*<option value="inv0">Martin Kvist</option>
-						<option value="inv1">Lena Larsson</option>
-						<option value="inv2">Oskar Ivarsson</option>
-						<option value="inv3">Susanne Fred</option>*@
-					@foreach (Employee ee in await Model.GetEmployeesOfDepartmentAndRole(ViewBag.departmentId, "Investigator"))
-					{
-						<option value="@ee.EmployeeId">@ee.EmployeeName</option>
-					}
-				</select>
-			</td>
-			<td><input class="button" type="submit" value="Hämta lista" /></td>
+						}
+					</select>
+				</td>
+				<td>
+					<select name="investigatorId">
+						<option selected="selected">Välj alla</option>
+						@foreach (Employee ee in await Model.GetEmployeesOfDepartmentAndRole(ViewBag.departmentId, "Investigator"))
+						{
+							<option value="@ee.EmployeeId">@ee.EmployeeName</option>
+						}
+					</select>
+				</td>
+				<input type="hidden" name="isCasenumber" value="false" />
+				<td><input class="button" type="submit" value="Hämta lista" /></td>
+		</form>
+		<form asp-controller="Manager" asp-action="StartManager" method="post" enctype="multipart/form-data" multiple>
 			<td><input name="casenumber" /></td>
+			<input type="hidden" name="isCasenumber" value="true" />
 			<td><input class="button" type="submit" value="Sök" /></td>
+		</form>
 		</tr>
 	</table>
 
-	@await Component.InvokeAsync("StartViewErrandContent", ViewBag.employeeID)
+	@*@await Component.InvokeAsync("StartViewErrandContent", ViewBag.employeeID)*@
+	@await Component.InvokeAsync("StartViewErrandContent", ViewBag.startViewErrandInputData)
